--- a/Backend/login/loginapp/templates/loginapp/Html file/Business.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Business.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>Tax Management System</title>
-    <link rel="stylesheet" type="text/css" href="../css/news.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/news.css' %}" />
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -35,10 +36,10 @@
       <nav class="navbar navbar-expand-md navbar-dark navigation">
         <div class="container">
           <a
-            href="../index.html"
+            href="{% url 'home' %}"
             class="navbar-brand text-warning font-weight-bold"
           >
-            <img class="navbar-logo" src="../images/logo1.png" />
+            <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
           </a>
 
           <button
@@ -52,7 +53,7 @@
           <div class="collapse navbar-collapse text-center" id="collapsenavbar">
             <ul class="navbar-nav ml-auto mr-auto">
               <li class="nav-item">
-                <a href="../index.html" class="nav-link text-white">HOME</a>
+                <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
               </li>
               <li class="nav-item">
                 <a href="./About.html" class="nav-link text-white">ABOUT US</a>
@@ -69,13 +70,21 @@
                   NEWS
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#"> POLITICS </a>
+                  <a class="dropdown-item" href="{% url 'politics' %}">
+                    POLITICS
+                  </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#"> ENTERTAINMENT </a>
+                  <a class="dropdown-item" href="{% url 'entertainment' %}">
+                    ENTERTAINMENT
+                  </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#"> BUSINESS </a>
+                  <a class="dropdown-item" href="{% url 'business' %}">
+                    BUSINESS
+                  </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#"> SPORTS </a>
+                  <a class="dropdown-item" href="{% url 'sports' %}">
+                    SPORTS
+                  </a>
                 </div>
               </li>
               <li class="nav-item">
@@ -84,9 +93,9 @@
                 >
               </li>
             </ul>
-            <a href="./SignIn.html" class="nav-link text-white">
+            <a href="{% url 'logout' %}" class="nav-link text-white">
               <button type="button" class="btn btn-primary btn-sm">
-                Sign-in
+                Logout
               </button>
             </a>
             <form class="d-flex">
@@ -107,22 +116,28 @@
     <div class="bg-image">
       <div class="overlay">
         <div class="container">
-          <h4 class="topic text-center">Politics</h4>
+          <h4 class="topic text-center">Business</h4>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mt-5">
+          {% for post in object_list %} {% if post.category == 'Business' %}
           <div class="row">
             <div class="col-lg-5">
-              <img src="../images/Covid.jpg" style="width: 100%" />
+              <!-- <img src="{% static 'Images/Covid.jpg' %}" style="width: 100%" /> -->
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" style="width: 100%" />
+              {% else %}
+              <img
+                src="{% static 'Images/icon-image.png' %}"
+                style="width: 100%"
+              />
+              {% endif %}
             </div>
             <div class="col-lg-7">
-              <p class="title">
-                Govt: Hospital beds can’t be enough for Covid-19 patients,
-                prevention measures are a must
-              </p>
+              <p class="title">{{ post.title }}</p>
               <div class="row ml-2">
                 <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
                 &nbsp;&nbsp;&nbsp;
@@ -131,96 +146,14 @@
             </div>
             <hr style="border: 1px solid grey; width: 98%" />
           </div>
-          <div class="row">
-            <div class="col-lg-5">
-              <img src="../images/news1.jpg" style="width: 100%" />
-            </div>
-            <div class="col-lg-7">
-              <p class="title">
-                Kathmandu city govt spends millions of taxpayers’ money to aid
-                political party units
-              </p>
-              <div class="row ml-2">
-                <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
-                &nbsp;&nbsp;&nbsp;
-                <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
-              </div>
-            </div>
-            <hr style="border: 1px solid grey; width: 98%" />
-          </div>
-          <div class="row">
-            <div class="col-lg-5">
-              <img src="../images/news2.jpg" style="width: 100%" />
-            </div>
-            <div class="col-lg-7">
-              <p class="title">
-                Ahead of no-confidence vote, Gandaki CM appoints Deepak Manange
-                minister
-              </p>
-              <div class="row ml-2">
-                <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
-                &nbsp;&nbsp;&nbsp;
-                <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
-              </div>
-            </div>
-            <hr style="border: 1px solid grey; width: 98%" />
-          </div>
-          <div class="row">
-            <div class="col-lg-5">
-              <img src="../images/news3.jpg" style="width: 100%" />
-            </div>
-            <div class="col-lg-7">
-              <p class="title">
-                Nepal seeks alternative to India for Covid-19 vaccines
-              </p>
-              <div class="row ml-2">
-                <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
-                &nbsp;&nbsp;&nbsp;
-                <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
-              </div>
-            </div>
-            <hr style="border: 1px solid grey; width: 98%" />
-          </div>
-          <div class="row">
-            <div class="col-lg-5">
-              <img src="../images/news4.jpg" style="width: 100%" />
-            </div>
-            <div class="col-lg-7">
-              <p class="title">
-                Bagmati CM expands cabinet to induct 4 new ministers
-              </p>
-              <div class="row ml-2">
-                <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
-                &nbsp;&nbsp;&nbsp;
-                <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
-              </div>
-            </div>
-            <hr style="border: 1px solid grey; width: 98%" />
-          </div>
-          <div class="row">
-            <div class="col-lg-5">
-              <img src="../images/news5.jpg" style="width: 100%" />
-            </div>
-            <div class="col-lg-7">
-              <p class="title">
-                UN calls on Nepal to reverse NHRC appointments that are
-                ‘inconsistent with international standards’
-              </p>
-              <div class="row ml-2">
-                <i class="fa fa-clock-o" aria-hidden="true"> 1 day ago</i>
-                &nbsp;&nbsp;&nbsp;
-                <i class="fa fa-comment" aria-hidden="true"> 0 comments</i>
-              </div>
-            </div>
-            <hr style="border: 1px solid grey; width: 98%" />
-          </div>
+          {% endif%} {% endfor %}
         </div>
         <!--Right side news code-->
         <div class="col-lg-4" id="most_viewed_news">
           <h4 class="viewed_news px-2 py-2 mb-5">Most Viewed News</h4>
           <div class="row">
             <div class="col-lg-6">
-              <img src="../images/pathao.jpg" class="news_image" />
+              <img src="{% static 'Images/pathao.jpg' %}" class="news_image" />
             </div>
             <div class="col-lg-6">
               <p style="font-family: Roboto; font-size: 15px; font-weight: 500">
@@ -232,7 +165,10 @@
           <hr />
           <div class="row">
             <div class="col-lg-6">
-              <img src="../images/football.jpg" class="news_image" />
+              <img
+                src="{% static 'Images/football.jpg' %}"
+                class="news_image"
+              />
             </div>
             <div class="col-lg-6">
               <p style="font-family: Roboto; font-size: 15px; font-weight: 500">
@@ -244,7 +180,7 @@
           <hr />
           <div class="row">
             <div class="col-lg-6">
-              <img src="../images/licence.jpg" class="news_image" />
+              <img src="{% static 'Images/licence.jpg' %}" class="news_image" />
             </div>
             <div class="col-lg-6">
               <p
@@ -263,7 +199,7 @@
           <hr />
           <div class="row">
             <div class="col-lg-6">
-              <img src="../images/flight.jpg" class="news_image" />
+              <img src="{% static 'Images/flight.jpg' %}" class="news_image" />
             </div>
             <div class="col-lg-6">
               <p style="font-family: Roboto; font-size: 15px; font-weight: 500">
@@ -318,7 +254,7 @@
       <div class="container">
         <div class="row" style="margin-top: 25px">
           <div class="col-lg-4 footer-content">
-            <img src="../images/logo1.png" class="navbar-logo" />
+            <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
             <p>The english edition Online News</p>
             <p>Phone No: 9856234124,014256352</p>
             <p>taxcompany@gmail.com</p>
