About and Tax calculator can be viewed form our website.

--- a/Backend/login/loginapp/templates/loginapp/Html file/index.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/index.html
@@ -93,7 +93,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a href="pages/politics.html" class="nav-link text-white"
+                <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
                   >TAX CALCULATOR</a
                 >
               </li>
