--- a/Backend/login/loginapp/templates/loginapp/Html file/About.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/About.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>Tax Management System</title>
-            <link rel="stylesheet" type="text/css" href="../css/About.css">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/About.css' %}">
             <!-- Latest compiled and minified CSS -->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -27,8 +28,8 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="../index.html" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "../images/logo1.png">
+				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
+					<img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
 				</a>
 
 				<button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
@@ -38,38 +39,38 @@
 				<div class="collapse navbar-collapse text-center " id="collapsenavbar">
 					<ul class="navbar-nav ml-auto mr-auto">
 						<li class="nav-item"> 
-							<a href="../index.html" class="nav-link text-white">HOME</a>
+							<a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
 						</li>
 						<li class="nav-item"> 
-							<a href="About.html" class="nav-link text-white">ABOUT US</a>
+							<a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
 								NEWS
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="./News.html">
+								<a class="dropdown-item" href="{% url 'politics' %}">
 									POLITICS
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">
+								<a class="dropdown-item" href="{% url 'entertainment' %}">
 									ENTERTAINMENT
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">
+								<a class="dropdown-item" href="{% url 'business' %}">
 									BUSINESS
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">
+								<a class="dropdown-item" href="{% url 'sports' %}">
 									SPORTS
 								</a>
 							</div>
 						</li>
 						<li class="nav-item"> 
-							<a href="./taxCalculator.html" class="nav-link text-white">TAX CALCULATOR</a>
+							<a href="{% url 'Tax_calculator' %}" class="nav-link text-white">TAX CALCULATOR</a>
 						</li>
 					</ul>
-					<a href="./SignIn.html" class="nav-link text-white">
+					<a href="{% url 'login' %}" class="nav-link text-white">
 						<button type="button" class="btn btn-primary btn-sm">Sign-in</button>
 					</a>
 					 <form class="d-flex">
@@ -116,8 +117,8 @@
                 </p> -->
             </div>
             <div class="col-lg-6">
-                <img src="../images/building.jpg" class="building-img">
-                <img src="../images/building2.jpg" class="building-img mt-5">
+                <img src="{% static 'Images/building.jpg' %}">
+                <img src="{% static 'Images/building2.jpg"' %}" class="building-img mt-5">
             </div>
         </div>
         <div class="text-center">
@@ -180,7 +181,7 @@
          <div class="container">
             <div class="row" style="margin-top: 25px;">
                 <div class="col-lg-4 footer-content">
-                    <img src ="../images/logo1.png" class="navbar-logo">
+                    <img src ="{% static 'Images/logo1.png' %}" class="navbar-logo">
                     <p>The english edition Online News</p>
                     <p>Phone No: 9856234124,014256352</p>
                     <p>taxcompany@gmail.com</p>
