Made the bug in index, edit and dashboard page

--- a/Backend/login/loginapp/static/css/Register.css
+++ b/Backend/login/loginapp/static/css/Register.css
@@ -140,8 +140,26 @@ input{
 	color: #555;
 }
 
-
-.button{
+.button {
+	display: block;
+	border: none;
+	outline: none;
+	height: 50px;
+	width: 100%;
+	border-radius: 25px;
+	margin: 1rem 0;
+	font-size: 1.2rem;
+	background-image: linear-gradient(to right, #38d39f, #090162, #38d39f);
+	color: #fff;
+	font-family: 'Poppins';
+	background-size: 200%;
+	transition: .5s;
+	text-transform: uppercase;
+}
+.button:hover {
+  background-position: right;
+}
+/* .button{
 	 border: none;
      outline: none;
      height: 50px;
@@ -158,7 +176,7 @@ input{
         border: 1px solid;
         color: #090162;
         box-shadow: none;
-      }
+      } */
 
 @media screen and (max-width: 1000px){
 	form{
