--- a/Backend/login/loginapp/templates/loginapp/Html file/About.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/About.html
@@ -117,8 +117,8 @@
                 </p> -->
             </div>
             <div class="col-lg-6">
-                <img src="{% static 'Images/building.jpg' %}">
-                <img src="{% static 'Images/building2.jpg"' %}" class="building-img mt-5">
+                <img src="{% static 'Images/building.jpg' %}" class="building-img mt-5">
+                <img src="{% static 'Images/building2.jpg' %}" class="building-img mt-5">
             </div>
         </div>
         <div class="text-center">
