--- a/Backend/login/loginapp/static/css/About.css
+++ b/Backend/login/loginapp/static/css/About.css
@@ -1,57 +1,60 @@
-.navigation{
-	background-color: #090162;
+.navigation {
+    background-color: #090162;
 }
-.navbar-logo{
+
+.navbar-logo {
     margin-left: 4px;
     cursor: pointer;
     width: 60px;
     margin-top: 0rem;
 }
-.nav-link{
-	font-family: Poppins;
-	margin: 10px;
-	font-size: 16px;
+
+.nav-link {
+    font-family: Poppins;
+    margin: 10px;
+    font-size: 16px;
 }
 
-.bg-image{
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../images/news-bg.png');
+.bg-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/news-bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
     width: 100%;
     height: 500px;
-    
+
 }
 
-.topic{
+.topic {
     font-family: Roboto;
     font-size: 28px;
 }
 
-.paragraph{
+.paragraph {
     font-family: Roboto;
     font-size: 18px;
     text-align: justify;
 }
 
-.building-img{
-    width:650px;
+.building-img {
     height: auto;
+    overflow: hidden;
+
 }
 
 /*footer css of index.html*/
-.footer{
-	background-color: #090162; 
-	color: white;
+.footer {
+    background-color: #090162;
+    color: white;
 }
 
-.footer-content{
-	margin-top: 20px;
+.footer-content {
+    margin-top: 20px;
 }
 
-.icons{
-	background-color: ghostwhite;
-	border: 1px solid white;
-	border-radius: 50%;
-	font-size: 15px !important;
+.icons {
+    background-color: ghostwhite;
+    border: 1px solid white;
+    border-radius: 50%;
+    font-size: 15px !important;
 }
